--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>801</width>
+    <width>735</width>
     <height>535</height>
    </rect>
   </property>
@@ -333,7 +333,7 @@ background-color: #a6aaaf;
 </string>
                </property>
                <property name="text">
-                <string>데이터셋 추가</string>
+                <string>데이터 추가</string>
                </property>
               </widget>
              </item>
@@ -355,12 +355,12 @@ background-color: #a6aaaf;
 </string>
                </property>
                <property name="text">
-                <string>데이터셋 라벨링</string>
+                <string>데이터 라벨링</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="data_split_button">
+              <widget class="QPushButton" name="dataset_create_button">
                <property name="font">
                 <font>
                  <family>맑은 고딕</family>
@@ -377,7 +377,7 @@ background-color: #a6aaaf;
 </string>
                </property>
                <property name="text">
-                <string>데이터셋 분할</string>
+                <string>데이터셋 생성</string>
                </property>
               </widget>
              </item>
@@ -532,7 +532,7 @@ background-color: #a6aaaf;
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QPushButton" name="autoencoder_button">
+              <widget class="QPushButton" name="efficientAD_button">
                <property name="font">
                 <font>
                  <family>맑은 고딕</family>
@@ -549,7 +549,7 @@ background-color: #a6aaaf;
 </string>
                </property>
                <property name="text">
-                <string>AUTOENCODER 학습</string>
+                <string>EfficientAD 학습</string>
                </property>
               </widget>
              </item>
@@ -561,7 +561,7 @@ background-color: #a6aaaf;
           <layout class="QGridLayout" name="gridLayout_11">
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_10">
-             <item row="0" column="0">
+             <item row="1" column="0">
               <widget class="QLabel" name="label_3">
                <property name="font">
                 <font>
@@ -579,7 +579,70 @@ background-color: #a6aaaf;
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
+             <item row="3" column="0">
+              <widget class="QWidget" name="anomaly_detect_widget" native="true">
+               <property name="styleSheet">
+                <string notr="true">#anomaly_detect_widget{
+	border: 2px solid#a6aaaf;
+	border-radius: 5px;
+}</string>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_9">
+                <item row="2" column="0">
+                 <spacer name="verticalSpacer_3">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>147</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QPushButton" name="anomaly_detect_start_button">
+                  <property name="font">
+                   <font>
+                    <family>맑은 고딕</family>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">border: 4px solid#a6aaaf;
+border-radius: 5px;
+padding: 1px 5px;
+background-color: #a6aaaf;</string>
+                  </property>
+                  <property name="text">
+                   <string>검출 시작</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_5">
+                  <property name="font">
+                   <font>
+                    <family>맑은 고딕</family>
+                    <pointsize>11</pointsize>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>이상 검출</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item row="2" column="0">
               <widget class="QWidget" name="yolo_detect_widget" native="true">
                <property name="styleSheet">
                 <string notr="true">#yolo_detect_widget{
@@ -589,6 +652,16 @@ background-color: #a6aaaf;
 </string>
                </property>
                <layout class="QGridLayout" name="gridLayout_8">
+                <item row="2" column="0" alignment="Qt::AlignHCenter">
+                 <widget class="QComboBox" name="comboBox">
+                  <property name="maximumSize">
+                   <size>
+                    <width>200</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
                 <item row="0" column="0">
                  <widget class="QLabel" name="label_4">
                   <property name="font">
@@ -607,20 +680,7 @@ background-color: #a6aaaf;
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="0">
-                 <spacer name="verticalSpacer_2">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>146</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item row="2" column="0">
+                <item row="5" column="0">
                  <layout class="QHBoxLayout" name="horizontalLayout_2">
                   <item>
                    <widget class="QPushButton" name="detect_image_button">
@@ -666,66 +726,10 @@ background-color: #a6aaaf;
                   </item>
                  </layout>
                 </item>
-               </layout>
-              </widget>
-             </item>
-             <item row="2" column="0">
-              <widget class="QWidget" name="anomaly_detect_widget" native="true">
-               <property name="styleSheet">
-                <string notr="true">#anomaly_detect_widget{
-	border: 2px solid#a6aaaf;
-	border-radius: 5px;
-}</string>
-               </property>
-               <layout class="QGridLayout" name="gridLayout_9">
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_5">
-                  <property name="font">
-                   <font>
-                    <family>맑은 고딕</family>
-                    <pointsize>11</pointsize>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
+                <item row="3" column="0" alignment="Qt::AlignHCenter">
+                 <widget class="QPushButton" name="refresh">
                   <property name="text">
-                   <string>이상 검출</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <spacer name="verticalSpacer_3">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>147</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item row="2" column="0">
-                 <widget class="QPushButton" name="anomaly_detect_start_button">
-                  <property name="font">
-                   <font>
-                    <family>맑은 고딕</family>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">border: 4px solid#a6aaaf;
-border-radius: 5px;
-padding: 1px 5px;
-background-color: #a6aaaf;</string>
-                  </property>
-                  <property name="text">
-                   <string>검출 시작</string>
+                   <string>새로고침</string>
                   </property>
                  </widget>
                 </item>
