--- a/gui/yolo_learn_window.ui
+++ b/gui/yolo_learn_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>625</width>
+    <width>623</width>
     <height>443</height>
    </rect>
   </property>
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#YoloLearnWindow{
+   <string notr="true">YoloLearnWindow{
 	font: 9pt &quot;맑은 고딕&quot;;
 	background-color: #fff;
 }</string>
@@ -185,38 +185,6 @@ padding: 1px 5px;
       </item>
      </layout>
     </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="train_button">
-      <property name="font">
-       <font>
-        <family>맑은 고딕</family>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton:hover {
-    color: #fff;
-}
-QPushButton {
-    border: 4px solid#a6aaaf;
-	border-radius: 5px;
-	padding: 1px 5px;
-	background-color: #a6aaaf;
-}</string>
-      </property>
-      <property name="text">
-       <string>학습 시작</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QProgressBar" name="progressBar">
-      <property name="value">
-       <number>0</number>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
@@ -229,6 +197,67 @@ QPushButton {
        </size>
       </property>
      </spacer>
+    </item>
+    <item row="2" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="train_start">
+        <property name="font">
+         <font>
+          <family>맑은 고딕</family>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton:hover {
+    color: #fff;
+}
+QPushButton {
+    border: 4px solid#a6aaaf;
+	border-radius: 5px;
+	padding: 1px 5px;
+	background-color: #a6aaaf;
+}</string>
+        </property>
+        <property name="text">
+         <string>학습 시작</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="train_stop">
+        <property name="font">
+         <font>
+          <family>맑은 고딕</family>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton:hover {
+    color: #fff;
+}
+QPushButton {
+    border: 4px solid#a6aaaf;
+	border-radius: 5px;
+	padding: 1px 5px;
+	background-color: #a6aaaf;
+}</string>
+        </property>
+        <property name="text">
+         <string>학습 중지</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="3" column="0">
+     <widget class="QProgressBar" name="progressBar">
+      <property name="value">
+       <number>0</number>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
