--- a/gui/anomaly_learn_window.ui
+++ b/gui/anomaly_learn_window.ui
@@ -187,40 +187,31 @@ QPushButton {
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QProgressBar" name="progressBar">
-      <property name="value">
-       <number>0</number>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="0">
-     <spacer name="verticalSpacer">
-      <property name="styleSheet">
-       <string>AnomalyLearnWindow {
-	font: 9pt &quot;맑은 고딕&quot;;
-	background-color: #fff;
-}
-QPushButton:hover {
-    color: #fff;
-}
-QPushButton {
-    border: 4px solid#a6aaaf;
-	border-radius: 5px;
-	padding: 1px 5px;
-	background-color: #a6aaaf;
-}</string>
+     <widget class="QScrollArea" name="scrollArea">
+      <property name="widgetResizable">
+       <bool>true</bool>
       </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>298</height>
-       </size>
-      </property>
-     </spacer>
+      <widget class="QWidget" name="scrollAreaWidgetContents">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>601</width>
+         <height>257</height>
+        </rect>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="process">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
