--- a/gui/yolo_detect_image_window.ui
+++ b/gui/yolo_detect_image_window.ui
@@ -20,8 +20,8 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="0" column="0">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0" colspan="2">
        <widget class="QPushButton" name="image_upload_button">
@@ -50,20 +50,14 @@ QPushButton {
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string/>
       </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>70</height>
-       </size>
-      </property>
-     </spacer>
+     </widget>
     </item>
-    <item row="2" column="0">
+    <item>
      <widget class="QPushButton" name="yolo_detect_start_button">
       <property name="font">
        <font>
@@ -85,13 +79,6 @@ QPushButton {
       </property>
       <property name="text">
        <string>검출 시작</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QProgressBar" name="progressBar">
-      <property name="value">
-       <number>0</number>
       </property>
      </widget>
     </item>
